--- a/style/variables.css
+++ b/style/variables.css
@@ -1,13 +1,17 @@
 @font-face {
   font-family: "Humane";
-  src: url(https://cdn.jsdelivr.net/gh/daveee00/drawings/fonts/Humane-font/Humane-Bold.otf);
+  src: url(https://cdn.jsdelivr.net/gh/daveee00/drawings/fonts/Humane-font/Humane-Bold.otf) format('opentype');
   font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Humane";
-  src: url(https://cdn.jsdelivr.net/gh/daveee00/drawings/fonts/Humane-font/Humane-Medium.otf);
+  src: url(https://cdn.jsdelivr.net/gh/daveee00/drawings/fonts/Humane-font/Humane-Medium.otf) format('opentype');
   font-weight: 400;
+    font-style: normal;
+  font-display: swap;
 }
 
 .text-bigger p {
