--- a/style/variables.css
+++ b/style/variables.css
@@ -21,9 +21,7 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  height: auto;
   letter-spacing: normal;
-  line-height: 1.05;
   margin: 0px;
   text-align: left;
   width: calc(100% - (var(--gap-h-6aafdb5d-42fa-4e10-8eb9-428f585b1340) * 0));
@@ -31,6 +29,17 @@
     100% - (var(--gap-h-6aafdb5d-42fa-4e10-8eb9-428f585b1340) * 0)
   );
   justify-content: flex-start;
+    font-family: "Humane" !important;
+  line-height: 1.05 !important;
+  height: auto !important;
+  display: block !important;
+  position: relative !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  transform-origin: left top !important;
+  transform: translateZ(0) !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
 }
 
 .text-smaller p {
@@ -53,19 +62,33 @@
 }
 
 .title-drawing p {
-  font-family: "Humane";
+  font-family: "Humane" !important;
   font-size: 8em;
   font-weight: 600;
+  line-height: 1 !important;
+  height: 1em !important;
+  display: block !important;
+  position: relative !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  transform-origin: left top !important;
+  transform: translateZ(0) !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
 }
 
 .content .content-title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  z-index: 2;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  display: flex !important;
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+  z-index: 2 !important;
+  overflow: visible !important;
 }
 
 .content .content-text {
@@ -104,4 +127,13 @@
     flex-direction: column;
     align-items: left;
     justify-content: end;
+}
+
+.sketchbook-heading {
+  position: relative !important;
+  width: 100% !important;
+  display: flex !important;
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+  overflow: visible !important;
 }
