--- a/style/footer.css
+++ b/style/footer.css
@@ -1,16 +1,18 @@
 footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 footer p {
-    font-size: 12px;
-  font-weight: 500;
-  text-align: left;
-  margin-left: 20px;
+  font-size: 12px;
+font-weight: 500;
+text-align: left;
+margin-left: 20px;
 }
 
 footer img {
-    height: 40%;
+  height: 30px;
+  margin-right: 20px;
 }
