--- a/style/footer.css
+++ b/style/footer.css
@@ -1,8 +1,15 @@
+.last-space {
+  width: 100vw;
+  height: 8px;
+  border-bottom: 2px solid black;
+}
+
 footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding-top: 4px;
 }
 
 footer p {
