--- a/style/index.css
+++ b/style/index.css
@@ -8,6 +8,17 @@ body {
   box-sizing: border-box;
 }
 
+.bg-picture {
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  background-repeat: no-repeat;
+  opacity: .8;
+}
+
 main {
   align-items: flex-start;
   display: flex;
@@ -139,6 +150,10 @@ header .text-icon {
   display: none;
   text-decoration: none;
   transition: 0.3s;
+}
+
+header nav .inspo:hover {
+  cursor:default;
 }
 
 .inspo:hover .text-icon {
@@ -333,28 +348,4 @@ header .text-icon {
 .animation-section .title-animation-container path {
   fill: rgb(0, 0, 0);
   mix-blend-mode: multiply;
-}
-
-
-/*–––––––––––––––––––––––––––––––––-*/
-
-.bubbles {
-  display: flex;
-  flex: none;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
-  height: 100vh;
-  margin: 14px 20px 220px 20px;
-  padding: 0px 0px 20px 0px;
-  width: calc(100% - 40px);
-  max-width: calc(100% - 40px);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.bubbles img {
-  height: 10%;
 }
